[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BioArticlePusher"
version = "1.1.0"
description = "生物文章推送系统 - 智能搜索、AI过滤和飞书推送"
readme = "README.md"
authors = [
    {name = "ykongxiang"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "article", "search", "ai", "filter", "feishu", "pubmed", "biorxiv"]
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.25.0",
    "PyYAML>=5.4.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ykongxiang/BioArticlePusher"
Documentation = "https://github.com/ykongxiang/BioArticlePusher/blob/main/README.md"
Repository = "https://github.com/ykongxiang/BioArticlePusher"
Issues = "https://github.com/ykongxiang/BioArticlePusher/issues"


[project.scripts]
bioarticle-pusher = "pusher.cli:main"

[tool.setuptools]
packages = ["pusher"]

[tool.setuptools.package-data]
pusher = ["*.yaml", "*.template"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]